Fixed view on safari

--- a/frontend/src/css/Sidebar.css
+++ b/frontend/src/css/Sidebar.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 100px;
   left: 0;
-  width: 50px;
+  width: 350px;
   height: 100%;
 }
 
